# fints-institute-db

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  build.rs  release.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
fints-institute-db/: Cargo.toml  build.rs  release.toml
fints-institute-db-cli/: Cargo.toml
fints-institute-db/src/: lib.rs
src/: lib.rs
tests/: cli.rs
