[package]
name = "fints-institute-db"
version = "1.2.2"
authors = ["Sven-Hendrik Haase <svenstaro@gmail.com>"]
edition = "2018"
description = "A library and CLI tool to access FinTS access information for many German banks"
repository = "https://github.com/svenstaro/fints-institute-db"
license = "MIT"
readme = "README.md"
keywords = ["fints", "hbci", "bank", "banks", "banking"]
categories = ["command-line-utilities", "command-line-interface", "parsing"]

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
clap = { version = "4", features = ["derive", "cargo", "wrap_help", "deprecated"] }
clap_complete = "4"
clap_mangen = "0.2"
iban_validate = "4"
serde = "1"
serde_derive = "1"
serde_json = "1"

[dependencies.regex]
version = "1"
features = ["unicode-perl"]

[dev-dependencies]
assert_cmd = "2.0"
doc-comment = "0.3"
predicates = "2"
pretty_assertions = "1.3"

[build-dependencies]
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"], default-features = false }
