[package]
name = "fints-institute-db"
version = "1.2.2"
authors = ["Sven-Hendrik Haase <svenstaro@gmail.com>"]
edition = "2018"
description = "A library and CLI tool to access FinTS access information for many German banks"
repository = "https://github.com/svenstaro/fints-institute-db"
license = "MIT"
readme = "README.md"
keywords = ["fints", "hbci", "bank", "banks", "banking"]
categories = ["command-line-utilities", "command-line-interface", "parsing"]

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
clap = { version = "4", features = ["derive", "cargo", "wrap_help", "deprecated"], optional = true }
clap_complete = { version = "4", optional = true }
clap_mangen = { version = "0.2", optional = true }
iban_validate = "4"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", optional = true }

[dependencies.regex]
version = "1"
features = ["unicode-perl"]

[features]
default = ["cli"]
cli = ["clap", "clap_complete", "clap_mangen", "serde/default", "serde_json"]

[dev-dependencies]
assert_cmd = "2.0"
doc-comment = "0.3"
predicates = "2"
pretty_assertions = "1.3"

[build-dependencies]
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"], default-features = false }
