[workspace]
members = [
    "fints-institute-db",
    "fints-institute-db-cli",
]
resolver = "2"

[workspace.package]
version = "1.3.0"
authors = ["Sven-Hendrik Haase <svenstaro@gmail.com>"]
edition = "2021"
repository = "https://github.com/svenstaro/fints-institute-db"
license = "MIT"
readme = "README.md"
keywords = ["fints", "hbci", "bank", "banks", "banking"]
categories = ["command-line-utilities", "command-line-interface", "parsing"]

[workspace.dependencies]
iban_validate = "5"
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
