[package]
name = "fints-institute-db"
description = "A library to access FinTS access information for many German banks"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
iban_validate.workspace = true
serde_json.workspace = true

serde = { version = "1", default-features = false, features = ["derive"] }
regex = { version = "1", features = ["unicode-perl"] }

[dev-dependencies]
assert_cmd = "2.2"
doc-comment = "0.3"
predicates = "3"
pretty_assertions = "1.4"

[build-dependencies]
reqwest = { version = "0.13", features = ["blocking"] }

[package.metadata.release]
sign-commit = true
sign-tag = true
pre-release-replacements = [
  {file="../CHANGELOG.md", search="Unreleased", replace="{{version}}"},
  {file="../CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="../CHANGELOG.md", search="ReleaseDate", replace="{{date}}"},
  {file="../CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n\n## [Unreleased] - ReleaseDate"},
  {file="../CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/svenstaro/fints-institute-db/compare/{{tag_name}}...HEAD", exactly=1},
]
# Get rid of the default cargo-release "chore: " prefix in messages as we don't
# use semantic commits in this repository.
pre-release-commit-message = "Release {{crate_name}} version {{version}}"
tag-message = "Release {{crate_name}} version {{version}}"
